# meetup-june-2023

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
demo/: _version.py  constants.py  utils.py
demo/cli/: main.py
